Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/Intake_Template__c.object-meta.xml
<CustomObject>
    <label>Intake Template</label>
    <pluralLabel>Intake Templates</pluralLabel>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Configurable intake scenario. Drives the runtime LWC and the generic PDF.</description>
</CustomObject>