Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/Brand_Color__c.field-meta.xml
<CustomField>
    <fullName>Brand_Color__c</fullName>
    <label>Brand Color</label>
    <type>Text</type>
    <length>7</length>
    <inlineHelpText>Hex color (e.g. #032D60) used as the PDF header background. Leave blank to use the default Salesforce blue.</inlineHelpText>
</CustomField>