Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/Brand_Logo_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo_File_Id__c</fullName>
    <label>Brand Logo File Id</label>
    <type>Text</type>
    <length>18</length>
    <inlineHelpText>ContentDocumentId of a logo uploaded to Salesforce Files. Renders inline in the PDF header. Takes priority over Brand Logo Static Resource.</inlineHelpText>
</CustomField>