Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/Brand_Logo_Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo_Static_Resource__c</fullName>
    <label>Brand Logo Static Resource</label>
    <type>Text</type>
    <length>80</length>
    <inlineHelpText>API name of a Static Resource holding the logo image (e.g. CompanyLogo). Used when Brand Logo File Id is blank.</inlineHelpText>
</CustomField>