Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/Default_Locale__c.field-meta.xml
<CustomField>
    <fullName>Default_Locale__c</fullName>
    <label>Default Locale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>en_US</fullName><default>true</default><label>English (US)</label></value>
            <value><fullName>es_MX</fullName><default>false</default><label>Spanish (Mexico)</label></value>
            <value><fullName>fr_FR</fullName><default>false</default><label>French (France)</label></value>
            <value><fullName>de_DE</fullName><default>false</default><label>German (Germany)</label></value>
            <value><fullName>pt_BR</fullName><default>false</default><label>Portuguese (Brazil)</label></value>
            <value><fullName>ja_JP</fullName><default>false</default><label>Japanese (Japan)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>