Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>