Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/Parent_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template__c</fullName>
    <label>Parent Template</label>
    <type>Lookup</type>
    <referenceTo>Intake_Template__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>