Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/PDF_Footer__c.field-meta.xml
<CustomField>
    <fullName>PDF_Footer__c</fullName>
    <label>PDF Footer</label>
    <type>Html</type>
    <length>32000</length>
    <inlineHelpText>Rich text shown at the bottom of every PDF. Supports links and basic formatting.</inlineHelpText>
</CustomField>