Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/PDF_Header__c.field-meta.xml
<CustomField>
    <fullName>PDF_Header__c</fullName>
    <label>PDF Header</label>
    <type>Html</type>
    <length>32000</length>
</CustomField>