Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/Persona_Description__c.field-meta.xml
<CustomField>
    <fullName>Persona_Description__c</fullName>
    <label>AI Persona Description</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <inlineHelpText>Framing for the AI assistant when extracting answers from a transcript.</inlineHelpText>
</CustomField>