Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <label>Target Object API Name</label>
    <type>Text</type>
    <length>120</length>
    <inlineHelpText>API name of the SObject that submitted intakes are written to. Leave blank to use Intake Submission as a fallback.</inlineHelpText>
</CustomField>