Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/validationRules/Brand_Color_Hex_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Brand_Color_Hex_Format</fullName>
    <active>true</active>
    <description>Brand_Color__c must be a 6-digit hex color prefixed with # (e.g. #032D60).</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Brand_Color__c)),
    NOT(REGEX(Brand_Color__c, &quot;^#[0-9A-Fa-f]{6}$&quot;))
)</errorConditionFormula>
    <errorMessage>Brand Color must be a 6-digit hex color prefixed with # (e.g. #032D60).</errorMessage>
</ValidationRule>