Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Target_Object_API_Name__c</columns>
    <columns>Version__c</columns>
    <columns>LAST_UPDATE</columns>
</ListView>